--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
            <!-- footer -->
             <div class="container bg-[#222222] w-full ">
-            <div class="bg-[#CE794D] flex justify-center gap-20 py-6 w-6/11 mx-20 shadow-lg flex-col md:flex-row p-10">
+            <div class="bg-[#CE794D] flex justify-center gap-20 py-6 w-6/11 mx-20  flex-col md:flex-row p-10">
               <img src="img/logo.png" alt="">
               <p>Enim venia quis nostrud exrcit ulamco laboris nst aliquipas conseqa<br> 
                 reprehen derit eu fugiat nula pariatur. Lorem ipsum dolor sitya amet <br> 
@@ -176,6 +176,9 @@
   
 
             </div>
+
+
+            <!-- end footer -->
 
     
     
