--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 
            <!-- footer -->
-            <div class="container ">
+            <div class="container  ">
             <div class="bg-[#CE794D] flex justify-center gap-20 py-6 w-full  shadow-lg flex-col md:flex-row p-10">
               <img src="img/logo.png" alt="">
               <p>Enim venia quis nostrud exrcit ulamco laboris nst aliquipas conseqa<br> 
@@ -163,7 +163,7 @@
           <a href="Shop">  instagram</a>
         </div>
 
-        <div class="payment flex gap-2 w-[105px] h-[40px]">
+        <div class=" flex gap-2 w-[30px] h-[10px] md:w-[105px] h-[40px]  ">
           <img src="img/payment-1.png" alt="">
           <img src="img/payment-2.png" alt="">
           <img src="img/payment-3.png" alt="">
