--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
             </div>
 
            </div>
+           <h2 class="text-3xl bg-yellow-600">my Footer</h2>
 
            <!-- end  catogories -->
 
