Footerka korkiisa ayaan wax kusoo daray h2 ayaan kussoo daray2

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 
            </div>
            <h2 class="text-3xl bg-yellow-600">my Footer</h2>
+           <h2 class="text-3xl bg-yellow-600">my Footer</h2>
 
            <!-- end  catogories -->
 
